--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@ code {
 .weather {
   background: rgba(0, 0, 0, 0.6);
 }
+
+.background {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
